--- a/templates/_base.html
+++ b/templates/_base.html
@@ -1,5 +1,5 @@
 
-{% import "_macros.html" as marcos %}
+{% import "_macros.html" as macros %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -8,10 +8,10 @@
     <meta name="viewport" content="width=device-width, initia;-scale=1.0">
     <link rel="stylesheet" href="/static/style.css">
     <title>
-        {% block titile %}
-        {{ titile }}
-        {% endblock titile %}
-    <title>
+        {% block title %}
+        {{ title }}
+        {% endblock title %}
+    </title>
 </head>
 <body>
     {% include "_navigation.html" %}
@@ -20,6 +20,6 @@
     {% block content %}
     {% endblock content %}
 
-    <footer><br><button>{{ marcos.light_or_dark_mode("body") }}</button></footer>
+    <footer><br><button>{{ macros.light_or_dark_mode("body") }}</button></footer>
 </body>
 </html>
