--- a/templates/_macros.html
+++ b/templates/_macros.html
@@ -6,7 +6,7 @@
 
 <style>
     {{ element }} {
-    background-color: #FFFFFF;
+    background-color: #212F3C;
     color: #FFFFF0;
     }
     {{ element }} a {
