--- a/templates/_base.html
+++ b/templates/_base.html
@@ -16,6 +16,8 @@
 <body>
     {% include "_navigation.html" %}
     <br>
+    {% {% include "_wheather.html" %}%}
+    <br><br><br>
 
     {% block content %}
     {% endblock content %}
