--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,8 +1,46 @@
-
-
 {% extends "_base.html" %}
 
 {% block content %}
 
-{{ macros.sort_price(pizzas) }}
+<table>
+    <tr>
+        <th>№</th>
+        <th>Назва </th>
+        <th>Ціна</th>
+        <th>Інгредієнти</th>
+    </tr>
+    {% for pizza in pizzas %}
+        <tr>
+            <td>{{ pizza.id }}</td>
+            <td>{{ pizza.name }}</td>
+            <td>{{ pizza.price }}</td>
+            <td>
+                {% for ingredient in pizza.ingredients %}
+                    {{ ingredient.name }}|
+                {% endfor %}
+            </td>
+        </tr>
+    {% endfor %}
+</table>
+
+<form action="{{ url_for('pizzas.add_pizza')}}" method="post">
+    <p>
+        <label>Назва</label>
+        <input type="text" name="name">
+    </p>
+    <p>
+        <label>Ціна</label>
+        <input type="number" name="price">
+    </p>
+    <p>
+        <label>Оберіть Інгредієнти</label>
+        <select name="ingredients" multiple>
+            {% for ingredient in ingredients %}
+                <option value="{{ ingredient.id}}">{{ ingredient.name }}</option>
+            {% endfor %}
+        </select>
+    </p>
+    <button type="submit">Додати піцу</button>
+</form>
+
 {% endblock content %}
