--- a/templates/_base.html
+++ b/templates/_base.html
@@ -16,7 +16,7 @@
 <body>
     {% include "_navigation.html" %}
     <br>
-    {% {% include "_wheather.html" %}%}
+    {% include "_wheather.html" %}
     <br><br><br>
 
     {% block content %}
