--- a/templates/menu.html
+++ b/templates/menu.html
@@ -8,6 +8,7 @@
         <th>Назва </th>
         <th>Ціна</th>
         <th>Інгредієнти</th>
+        <th>Видалити</th>
     </tr>
     {% for pizza in pizzas %}
         <tr>
@@ -19,6 +20,8 @@
                     {{ ingredient.name }}|
                 {% endfor %}
             </td>
+        <td><a href="{{ url_for('pizzas.del_pizza', id=pizza.id)}}" class="btn btn-danger">Видалити піцу</a></td>
+        <td><a href="{{ url_for('pizzas.edit_pizza', id=pizzas.id)}}" class="btn btn-danger">Редагувати піцу</a></td>
         </tr>
     {% endfor %}
 </table>
