--- a/templates/_wheather.html
+++ b/templates/_wheather.html
@@ -2,5 +2,5 @@
     <h1>Місто: <em>{{ wheather.city }}</em></h1>
     <h2>Температура: {{ wheather.temp }}</h2>
     <h3>{{ wheather.text }}</h3>
-    <img src="{{ wheather.json}}">
+    <img src="{{ wheather.icon}}">
 </div>
