--- a/templates/edit_pizza.html
+++ b/templates/edit_pizza.html
@@ -2,7 +2,7 @@
 
 {% block center_content %}
 
-<form action="{{ url_for('pizzas.edit_pizza')}}" method="post">
+<form action="{{ url_for('pizza.edit_pizza', id=pizza.id)}}" method="post">
     <p>
         <label>Назва</label>
         <input type="text" name="name">
@@ -11,7 +11,7 @@
         <label>Ціна</label>
         <input type="number" name="price">
     </p>
-    <button type="submit">Додати піцу</button>
+    <button type="submit">Редагувати піцу</button>
 </form>
 
-{% endblock content %}
+{% endblock center_content %}
