--- a/templates/edit_pizza.html
+++ b/templates/edit_pizza.html
@@ -1,17 +1,17 @@
 {% extends "_base.html" %}
 
-{% block center_content %}
+{% block content %}
 
-<form action="{{ url_for('pizza.edit_pizza', id=pizza.id)}}" method="post">
+<form action="{{ url_for('pizzas.edit_pizza', id=pizza.id)}}" method="post">
     <p>
         <label>Назва</label>
-        <input type="text" name="name">
+        <input type="text" name="name", value="{{ request.form.name or pizza.name }}">
     </p>
     <p>
         <label>Ціна</label>
-        <input type="number" name="price">
+        <input type="number" name="price", value="{{ request.form.name or pizza.name }}">
     </p>
     <button type="submit">Редагувати піцу</button>
 </form>
 
-{% endblock center_content %}
+{% endblock content %}
