--- a/templates/edit_pizza.html
+++ b/templates/edit_pizza.html
@@ -9,7 +9,7 @@
     </p>
     <p>
         <label>Ціна</label>
-        <input type="number" name="price", value="{{ request.form.name or pizza.name }}">
+        <input type="number" name="price", value="{{ request.form.price or pizza.price }}">
     </p>
     <button type="submit">Редагувати піцу</button>
 </form>
