--- a/templates/_navigation.html
+++ b/templates/_navigation.html
@@ -1,8 +1,11 @@
 
 <nav>
-{% for menu_item in ["pizzas.index", "pizzas.menu"]%}
+
 <button>
-    <a href="{{ url_for(menu_item) }}">{{ menu_item|upper}}</a>
+    <a href="{{ url_for('pizzas.index') }}">Головна сторінка</a>
+    <a href="{{ url_for('pizzas.menu') }}">Меню</a>
+    <a href="{{ url_for('pizzas.poll') }}">Голосувалка</a>
+    <a href="{{ url_for('pizzas.results') }}">Результати голосувалки</a>
 </button>
-{% endfor %}
+
 </nav>
