--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 {% extends "_base.html" %}
 
 {% block content %}
-{% {% include "_wheather.html" %}%}
+{%  include "_wheather.html" %}
 <h1><p>Пропонуємо вам таку піцу: <em>{{ pizza_name }}</em></p><h1>
 <a type="button", href="/menu"><em>Перейти в Шикайне меню</em></button>
 {% endblock content %}
