--- a/templates/results.html
+++ b/templates/results.html
@@ -1,6 +1,6 @@
 {% extends "_base.html" %}
 
-{% block center %}
+{% block content %}
 <label>Результати голосувалки про піци</label>
 <table class="table table-hover">
     <thead>
@@ -18,4 +18,4 @@
         {% endfor %}
     </tbody>
 </table>
-{% endblock center %}
+{% endblock content %}
