--- a/templates/_navigation.html
+++ b/templates/_navigation.html
@@ -6,6 +6,8 @@
     <a href="{{ url_for('pizzas.menu') }}">Меню</a>
     <a href="{{ url_for('pizzas.poll') }}">Голосувалка</a>
     <a href="{{ url_for('pizzas.results') }}">Результати голосувалки</a>
+    <a href="{{ url_for('reviews.add_review') }}">Залишити відгук</a>
+    <a href="{{ url_for('reviews.show_reviews') }}">Подивитися відгуки</a>
 </button>
 
 </nav>
