--- a/templates/add_review.html
+++ b/templates/add_review.html
@@ -1,7 +1,7 @@
-{% extends "base.html" %}
+{% extends "_base.html" %}
 
 {% block content %}
-<form action="{{ url_for('add_review') }}" method="post">
+<form action="{{ url_for('reviews.add_review') }}" method="post">
     <div class="form-group">
         {{ form.owner.label }}
         {{ form.owner(class="form-control") }}
@@ -16,4 +16,4 @@
     </div>
     {{ form.submit(class="bnt bnt-success") }}
 </form>
-{% endblock contnet %}
+{% endblock content %}
