--- a/templates/reviews.html
+++ b/templates/reviews.html
@@ -1,13 +1,13 @@
-{% extends "base.html" %}
+{% extends "_base.html" %}
 
 {% block content %}
 <table>
     <thead>
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td>№</td>
+            <td>Автор</td>
+            <td>Відгук</td>
+            <td>Оцінка</td>
         </tr>
     </thead>
     <tbody>
